--- a/report/report.tex
+++ b/report/report.tex
@@ -66,7 +66,7 @@ When I created the NFA and DFA ``objects'' originally, I included functions for 
 \section*{Findings}
 The inductive construction of $\varepsilon$ from regular expression is very inefficient with regards to the final $\varepsilon$-NFA size, and had a large number states that served no purpose other than to propagate $\varepsilon$-edges. The NFAs that I printed with $\varepsilon$-closure and $\varepsilon$-removal had so many transitions everywhere that they were unreadable. However, the DFA construction removed the large majority of unnecessary edges by combining redundant composite states, and the minimization (of course) combined any remaining equivalent states.
 
-I did not notice any difference in performance based on the size of the two inputs, but I wrote it in C (a language with very little overhead) and did not expect much of a difference. The vast majority of running time was spent compiling \LaTeX{} code in a separate process for displaying the automata.
+I did not notice any difference in performance based on the size of the two inputs, but I wrote it in C (a language with very little overhead) and did not test on huge inputs. The vast majority of running time was spent compiling \LaTeX{} code in a separate process, for displaying the automata. However, because I did not have access to a standard library containing sets, the running time on huge regular expressions and alphabets is expected to take a big performance hit. With a hashset, many of he $\mathcal{O}(|Q|)$ and $\mathcal{O}(|\Sigma|)$ loops could be reduced to $\mathcal{O}(1)$.
 
 Simulating the $\varepsilon$-NFA instead of converting to a minimal DFA would give the same result, but with a much larger runtime. In order to read a symbol into a DFA, I had to perform two array accesses and update the index of the current active state, altogether a constant time operation $\mathcal{O}(1)$. However, for the much-larger-than-necessary NFAs, the worst case is that every state is active, has a transition for every symbol in $\Sigma$ to every other state, and that you have to read every transition to update the entire NFA. The running time of reading a single symbol from such an NFA is then $\mathcal{O}(|N|^2*|\Sigma|)$. This absolute worst-case scenario will of course not happen with the $\varepsilon$-construction, but the number of states will be a constant factor larger than the length of the regular expression, and the asymptotic bound still holds. Clearly, DFAs win despite the overhead of creating them.
 
